# processor-emulator

./: CMakeLists.txt  README.md  main.cpp
example_programs/: fibonachi  recursive_factorial
include/: CommandParser.h  Commands.h  ProcessorEmulator.h  Stack.h
src/: BinTool.cpp  BinTool.h  CommandParser.cpp  CommandParser.h  Commands.cpp  Commands.h  Exceptions.h  ProcessorEmulator.cpp  ProcessorEmulator.h  ProcessorState.h  Stack.h  StartProgram.cpp  StartProgram.h  Starter.cpp  Starter.h
tests/: emulTests.cpp  factorial  parserTests.cpp  recursive_factorial  stack_tests.cpp  test_program  tests.cpp
